# rudder-sdk-cpp

./: CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt
include/rudder/: alias.h  group.h  identify.h  message.h  messagetype.h  page.h  rudder.h  screen.h  track.h  utils.h
rudder/: CMakeLists.txt  alias.cpp  group.cpp  identify.cpp  message.cpp  page.cpp  rudder.cpp  screen.cpp  timestamp.cpp  track.cpp
rudder/message/: Identify.cpp  Identify.h  Message.h  Timestamp.cpp  Timestamp.h
